# sesh

./: .seshconf.example.toml  CLAUDE.md  Cargo.toml  README.md  TESTING.md
src/: adjectives.rs  app.rs  cli.rs  conf.rs  main.rs  nouns.rs  tmux.rs  words.rs
