[package]
name = "sesh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
rand = "0.9.2"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14"
